# LinuxNvidiaAIDenoiser

./: .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  README.md  SConstruct  compile_commands.json
.cache/clangd/index/: Imath.h.99B6EFC0A9FF80D6.idx  ImathColor.h.B3EFDD55A48D16F0.idx  ImathConfig.h.C0641646BE2C5FDF.idx  ImathExport.h.A225F4A2BCEC2413.idx  ImathFun.h.C2A715F12DBDF9D3.idx  ImathMath.h.FFABF870D5FB503E.idx  ImathMatrix.h.0B949D706BB1CD80.idx  ImathNamespace.h.B20E109A47F51D00.idx  ImathPlatform.h.BB8B3E700CD50CD8.idx  ImathShear.h.4E4D9A9413F7165F.idx  ImathTypeTraits.h.F1037737A9447852.idx  ImathVec.h.09C6D89A839FD7E6.idx  __wmmintrin_aes.h.AA54B9D3FA9C5C8F.idx  __wmmintrin_pclmul.h.824B352B05559FEB.idx  adxintrin.h.5205859B2797B06D.idx  allocated_ptr.h.D6AB64EFE785DE55.idx  ammintrin.h.8C1848534A6B8C22.idx  amxfp16intrin.h.B2C9BAD811A242D1.idx  amxintrin.h.B64057A5CC9DD5A8.idx  array.4596776D66621060.idx  assert.h.F44EF353D67C7E11.idx  atomic.2F1B343CE7D1F26B.idx  atomic.h.688FA2400FF4E3A3.idx  atomic_futex.h.AB06311ADD9A9735.idx  attrdelegate.h.451487DEE271E8F3.idx  auto_ptr.h.5C147DA2E0A6C829.idx  avx2intrin.h.4574A242E038EB56.idx  avx512bf16intrin.h.66EB0E9BDF0548F5.idx  avx512bitalgintrin.h.A540C2575361564A.idx  avx512bwintrin.h.3A5223BB4D4C9E24.idx  avx512cdintrin.h.D347EE731043A6B7.idx  avx512dqintrin.h.276C3E5C666AC33F.idx  avx512erintrin.h.1F82B5751D0A4AD3.idx  avx512fintrin.h.F7E2E5C2EB017DEB.idx  avx512fp16intrin.h.5291A102BA466D51.idx  avx512ifmaintrin.h.8F076E650CD532F0.idx  avx512ifmavlintrin.h.7EE19FCD64282CD6.idx  (+205 more)
src/: main.cpp
